5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1747_3089.log
== TEST (2019-05-16 11:39:29) 
-- CODE:
mov=int(input("entre com o movimento:"))


while(mov=!0):
	soma=mov+soma
print(soma)	
	if(soma<0):
		print("Esquerda")
		
	else:
		(print("Direita"))
	
-- ERROR:
File "XXXX", line 4
    while(mov=!0):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:39:39) 
-- CODE:
mov=int(input("entre com o movimento:"))


while(mov!=0):
	soma=mov+soma
print(soma)	
	if(soma<0):
		print("Esquerda")
		
	else:
		(print("Direita"))
	
-- ERROR:
File "XXXX", line 7
    if(soma<0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:39:42) 
-- CODE:
mov=int(input("entre com o movimento:"))


while(mov!=0):
	soma=mov+soma
print(soma)	
	if(soma<0):
		print("Esquerda")
		
	else:
		(print("Direita"))
	
-- ERROR:
File "XXXX", line 7
    if(soma<0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:39:43) 
-- CODE:
mov=int(input("entre com o movimento:"))


while(mov!=0):
	soma=mov+soma
print(soma)	
	if(soma<0):
		print("Esquerda")
		
	else:
		(print("Direita"))
	
-- ERROR:
File "XXXX", line 7
    if(soma<0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:40:06) 
-- CODE:
mov=int(input("entre com o movimento:"))


while(mov!=0):
	soma=mov+soma
print(soma)	
if(soma<0):
	print("Esquerda")
		
else:
	(print("Direita"))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma=mov+soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:40:30) 
-- CODE:
mov=int(input("entre com o movimento:"))

soma=0
while(mov!=0):
	soma=mov+soma
print(soma)	
if(soma<0):
	print("Esquerda")
		
else:
	(print("Direita"))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma=mov+soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:41:35) 
-- CODE:
mov=int(input("entre com o movimento:"))

soma=0
while(mov!=0):
	mov=int(inputa("entre com o movimento:"))
	soma=mov+soma
print(soma)	
if(soma<0):
	print("Esquerda")
		
else:
	(print("Direita"))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mov=int(inputa("entre com o movimento:"))
NameError: name 'inputa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:41:45) 
-- CODE:
mov=int(input("entre com o movimento:"))

soma=0
while(mov!=0):
	mov=int(input("entre com o movimento:"))
	soma=mov+soma
print(soma)	
if(soma<0):
	print("Esquerda")
		
else:
	(print("Direita"))
	
-- OUTPUT:
11
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:44:20) 
-- CODE:
mov=int(input("entre com o movimento:"))

while(mov!=0):
	mov=int(input("entre com o movimento:"))
	soma=mov+soma
	print(soma)	
if(soma<0):
	print("Esquerda")
		
else:
	(print("Direita"))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma=mov+soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:44:36) 
-- CODE:
mov=int(input("entre com o movimento:"))
soma=0
while(mov!=0):
	mov=int(input("entre com o movimento:"))
	soma=mov+soma
	print(soma)	
if(soma<0):
	print("Esquerda")
		
else:
	(print("Direita"))
	
-- OUTPUT:
2
3
5
6
8
9
11
11
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:45:51) 
-- CODE:
mov=int(input("entre com o movimento:"))
soma=
while(mov!=0):
	mov=int(input("entre com o movimento:"))
	soma=mov+mov
	print(soma)	
if(soma<0):
	print("Esquerda")
		
else:
	(print("Direita"))
	
-- ERROR:
File "XXXX", line 2
    soma=
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:46:02) 
-- CODE:
mov=int(input("entre com o movimento:"))

while(mov!=0):
	mov=int(input("entre com o movimento:"))
	soma=mov+mov
	print(soma)	
if(soma<0):
	print("Esquerda")
		
else:
	(print("Direita"))
	
-- OUTPUT:
4
2
4
2
4
2
4
0
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:47:37) 
-- CODE:
mov=int(input("entre com o movimento:"))

while(mov!=0):
	mov=int(input("entre com o movimento:"))
	soma=mov+mov
print(soma)	
if(soma<0):
	print("Esquerda")
		
elif(soma==0)
	(print("inicial"))
elif(soma>0)
	print("Direita")
	
	
-- EXECUTION TIME:
0.283249
-- ERROR:
  File "/home/codebench/codes/1747/3089/main.py", line 10
    elif(soma==0)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:47:38) 
-- CODE:
mov=int(input("entre com o movimento:"))

while(mov!=0):
	mov=int(input("entre com o movimento:"))
	soma=mov+mov
print(soma)	
if(soma<0):
	print("Esquerda")
		
elif(soma==0)
	(print("inicial"))
elif(soma>0)
	print("Direita")
	
	
-- ERROR:
File "XXXX", line 10
    elif(soma==0)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:48:03) 
-- CODE:
mov=int(input("entre com o movimento:"))

while(mov!=0):
	mov=int(input("entre com o movimento:"))
	soma=mov+mov
print(soma)	
if(soma<0):
	print("Esquerda")
		
elif(soma==0):
	(print("inicial"))
elif(soma>0):
	print("Direita")
	
	
-- OUTPUT:
0
inicial
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:48:16) 
-- CODE:
mov=int(input("entre com o movimento:"))

while(mov!=0):
	mov=int(input("entre com o movimento:"))
	soma=mov+mov
print(soma)	
if(soma<0):
	print("Esquerda")
		
elif(soma==0):
	(print("inicial"))
elif(soma>0):
	print("Direita")
	
	
-- EXECUTION TIME:
0.184095
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
0
inicial
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
0
inicial
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
inicial
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:48:21) 
-- CODE:
mov=int(input("entre com o movimento:"))

while(mov!=0):
	mov=int(input("entre com o movimento:"))
	soma=mov+mov
print(soma)	
if(soma<0):
	print("Esquerda")
		
elif(soma==0):
	(print("inicial"))
elif(soma>0):
	print("Direita")
	
	
-- OUTPUT:
0
inicial
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:49:20) 
-- CODE:
mov=int(input("entre com o movimento:"))
soma=0
while(mov!=0):
	mov=int(input("entre com o movimento:"))
	soma=soma+mov+mov
print(soma)	
if(soma<0):
	print("Esquerda")
		
elif(soma==0):
	(print("inicial"))
elif(soma>0):
	print("Direita")
	
	
-- OUTPUT:
22
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:49:28) 
-- CODE:
mov=int(input("entre com o movimento:"))
soma=0
while(mov!=0):
	mov=int(input("entre com o movimento:"))
	soma=soma+mov+mov
print(soma)	
if(soma<0):
	print("Esquerda")
		
elif(soma==0):
	(print("inicial"))
elif(soma>0):
	print("Direita")
	
	
-- OUTPUT:
22
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:49:55) 
-- CODE:
mov=int(input("entre com o movimento:"))
soma=-1
while(mov!=0):
	mov=int(input("entre com o movimento:"))
	soma=soma+mov+mov
print(soma)	
if(soma<0):
	print("Esquerda")
		
elif(soma==0):
	(print("inicial"))
elif(soma>0):
	print("Direita")
	
	
-- OUTPUT:
21
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:50:00) 
-- CODE:
mov=int(input("entre com o movimento:"))
soma=-1
while(mov!=0):
	mov=int(input("entre com o movimento:"))
	soma=soma+mov+mov
print(soma)	
if(soma<0):
	print("Esquerda")
		
elif(soma==0):
	(print("inicial"))
elif(soma>0):
	print("Direita")
	
	
-- EXECUTION TIME:
0.152194
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
21
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-55
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
-21
Esquerda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:50:02) 
-- CODE:
mov=int(input("entre com o movimento:"))
soma=-1
while(mov!=0):
	mov=int(input("entre com o movimento:"))
	soma=soma+mov+mov
print(soma)	
if(soma<0):
	print("Esquerda")
		
elif(soma==0):
	(print("inicial"))
elif(soma>0):
	print("Direita")
	
	
-- OUTPUT:
21
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:50:31) 
-- CODE:
mov=int(input("entre com o movimento:"))
soma=0
while(mov!=0):
	mov=int(input("entre com o movimento:"))
	soma=soma+mov
print(soma)	
if(soma<0):
	print("Esquerda")
		
elif(soma==0):
	(print("inicial"))
elif(soma>0):
	print("Direita")
	
	
-- OUTPUT:
11
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:50:55) 
-- CODE:
mov=int(input("entre com o movimento:"))
soma=0
while(mov!=0):
	mov=int(input("entre com o movimento:"))
	soma=soma+mov+1
print(soma)	
if(soma<0):
	print("Esquerda")
		
elif(soma==0):
	(print("inicial"))
elif(soma>0):
	print("Direita")
	
	
-- OUTPUT:
19
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:53:07) 
-- CODE:
mov=int(input("entre com o movimento:"))
soma=0
while(mov!=0):
	mov=int(input("entre com o movimento:"))
	soma=soma+mov
	
print(soma)	
if(soma<0):
	print("Esquerda")
		
elif(soma==0):
	(print("inicial"))
elif(soma>0):
	print("Direita")
	
	
-- OUTPUT:
11
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:54:52) 
-- CODE:
mov=int(input("entre com o movimento:"))
soma=0
while(mov!=0):
	mov=int(input("entre com o movimento:"))
	soma=soma+(mov)
	
print(soma)	
if(soma<0):
	print("Esquerda")
		
elif(soma==0):
	(print("inicial"))
elif(soma>0):
	print("Direita")
	
	
-- OUTPUT:
11
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:54:54) 
-- CODE:
mov=int(input("entre com o movimento:"))
soma=0
while(mov!=0):
	mov=int(input("entre com o movimento:"))
	soma=soma+(mov)
	
print(soma)	
if(soma<0):
	print("Esquerda")
		
elif(soma==0):
	(print("inicial"))
elif(soma>0):
	print("Direita")
	
	
-- EXECUTION TIME:
0.203382
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
11
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-27
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
-10
Esquerda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:54:55) 
-- CODE:
mov=int(input("entre com o movimento:"))
soma=0
while(mov!=0):
	mov=int(input("entre com o movimento:"))
	soma=soma+(mov)
	
print(soma)	
if(soma<0):
	print("Esquerda")
		
elif(soma==0):
	(print("inicial"))
elif(soma>0):
	print("Direita")
	
	
-- OUTPUT:
11
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
